--- a/project.yaml
+++ b/project.yaml
@@ -11,7 +11,9 @@ parameters:
 
 required_credentials:
   - warehouse
-  - postgres_ethereum
+  # - postgres_ethereum
+  - bigquery
+  - postgres
 
 default_db: warehouse
 
@@ -27,6 +29,19 @@ presets:
       table: "{{ user_prefix }}{{ task.name['extract_'|length:] }}"
     incremental_key: id
     delete_key: id
+    max_merge_rows: 1000000
+
+  # Source Table and ddl required
+  extract_bigquery:
+    type: copy
+    source:
+      db: bigquery
+      schema: bigquery-public-data.crypto_ethereum
+    destination:
+      schema: "{{ schema['logs'] }}"
+      table: "{{ user_prefix }}{{ task.name['extract_'|length:] }}"
+    incremental_key: block_timestamp
+    delete_key: address
     max_merge_rows: 1000000
 
   staging:
