--- a/tasks/extract.yaml
+++ b/tasks/extract.yaml
@@ -8,7 +8,7 @@ tasks:
       stage: data_unload
       schema: analytics_models
       table: f_ethereum_token_summary
-      path: "Users/tim/f_ethereum_token_summary"
+      path: 'Users/tim/f_ethereum_token_summary'
 
   get_holders:
     type: python
@@ -18,127 +18,127 @@ tasks:
       stage: data_unload
       schema: analytics_models
       table: f_ethereum_holders
-      path: "Users/tim/f_ethereum_holders"
+      path: 'Users/tim/f_ethereum_holders'
 
-  extract_bq_ethereum_tokens:
-    preset: extract_bigquery
-    source:
-      table: tokens
+  # extract_bq_ethereum_tokens:
+  #   preset: extract_bigquery
+  #   source:
+  #     table: tokens
+  #
+  # extract_bq_ethereum_contracts:
+  #   preset: extract_bigquery
+  #   source:
+  #     table: contracts
+  #   max_merge_rows: 100000
+  #
+  # extract_bq_ethereum_blocks:
+  #   preset: extract_bigquery
+  #   source:
+  #     table: blocks
+  #   delete_key: hash
+  #
+  # extract_bq_ethereum_transactions:
+  #   preset: extract_bigquery
+  #   source:
+  #     table: transactions
+  #   delete_key: hash
+  #   max_merge_rows: 3500000
+  #   max_batch_rows: 200000
 
-  extract_bq_ethereum_contracts:
-    preset: extract_bigquery
-    source:
-      table: contracts
-    max_merge_rows: 100000
+  # extract_bq_EthereumBlock:
+  #   preset: extract_snowflake
 
-  extract_bq_ethereum_blocks:
-    preset: extract_bigquery
-    source:
-      table: blocks
-    delete_key: hash
-
-  extract_bq_ethereum_transactions:
-    preset: extract_bigquery
-    source:
-      table: transactions
-    delete_key: hash
-    max_merge_rows: 3500000
-    max_batch_rows: 200000
-
-  extract_ethereum_methods:
-    preset: extract_postgres
-    source:
-      table: EthereumMethod
-    ddl:
-      columns:
-        - id
-        - contract
-        - "method"
-        - name: params
-          type: variant
-        - "txHash"
-        - "createdAt"
-        - "updatedAt"
-
-  extract_ethereum_transactions:
-    preset: extract_postgres
-    source:
-      table: EthereumTx
-    ddl:
-      columns:
-        - id
-        - name: "from"
-          dst_name: "from_address"
-        - name: "to"
-          dst_name: "to_address"
-        - "transactionIndex"
-        - "gasPrice"
-        - gas
-        - "blockNumber"
-        - hash
-        - v
-        - s
-        - r
-        - "contractAddress"
-        - "cumulativeGasUsed"
-        - "gasUsed"
-        - logs
-        - "logsBloom"
-        - status
-        - value
-        - nonce
-        - "input"
-        - "balanceTo"
-        - "balanceFrom"
-        - "blockHash"
-        - "createdAt"
-        - "updatedAt"
-
-  extract_ethereum_blocks:
-    preset: extract_postgres
-    source:
-      table: EthereumBlock
-    ddl:
-      columns:
-        - id
-        - difficulty
-        - "extraData"
-        - "gasLimit"
-        - "blockGasUsed"
-        - hash
-        - "logsBloom"
-        - miner
-        - "mixHash"
-        - nonce
-        - "number"
-        - "parentHash"
-        - "receiptsRoot"
-        - "sha3Uncles"
-        - "stateRoot"
-        - "timestamp"
-        - "totalDifficulty"
-        - "transactionsRoot"
-        - name: uncles
-          type: variant
-        - "createdAt"
-        - "updatedAt"
-        - size
-
-  extract_ethereum_contracts:
-    preset: extract_postgres
-    source:
-      table: EthereumContract
-    ddl:
-      columns:
-        - id
-        - slug
-        - address
-        - type
-        - network
-        - name: metadata
-          type: variant
-        - createdAt
-        - updatedAt
-
-  extract_bq_EthereumBlock:
-    preset: extract_snowflake
+  # extract_ethereum_methods:
+  #   preset: extract_postgres
+  #   source:
+  #     table: EthereumMethod
+  #   ddl:
+  #     columns:
+  #       - id
+  #       - contract
+  #       - "method"
+  #       - name: params
+  #         type: variant
+  #       - "txHash"
+  #       - "createdAt"
+  #       - "updatedAt"
+  #
+  # extract_ethereum_transactions:
+  #   preset: extract_postgres
+  #   source:
+  #     table: EthereumTx
+  #   ddl:
+  #     columns:
+  #       - id
+  #       - name: "from"
+  #         dst_name: "from_address"
+  #       - name: "to"
+  #         dst_name: "to_address"
+  #       - "transactionIndex"
+  #       - "gasPrice"
+  #       - gas
+  #       - "blockNumber"
+  #       - hash
+  #       - v
+  #       - s
+  #       - r
+  #       - "contractAddress"
+  #       - "cumulativeGasUsed"
+  #       - "gasUsed"
+  #       - logs
+  #       - "logsBloom"
+  #       - status
+  #       - value
+  #       - nonce
+  #       - "input"
+  #       - "balanceTo"
+  #       - "balanceFrom"
+  #       - "blockHash"
+  #       - "createdAt"
+  #       - "updatedAt"
+  #
+  # extract_ethereum_blocks:
+  #   preset: extract_postgres
+  #   source:
+  #     table: EthereumBlock
+  #   ddl:
+  #     columns:
+  #       - id
+  #       - difficulty
+  #       - "extraData"
+  #       - "gasLimit"
+  #       - "blockGasUsed"
+  #       - hash
+  #       - "logsBloom"
+  #       - miner
+  #       - "mixHash"
+  #       - nonce
+  #       - "number"
+  #       - "parentHash"
+  #       - "receiptsRoot"
+  #       - "sha3Uncles"
+  #       - "stateRoot"
+  #       - "timestamp"
+  #       - "totalDifficulty"
+  #       - "transactionsRoot"
+  #       - name: uncles
+  #         type: variant
+  #       - "createdAt"
+  #       - "updatedAt"
+  #       - size
+  #
+  # extract_ethereum_contracts:
+  #   preset: extract_postgres
+  #   source:
+  #     table: EthereumContract
+  #   ddl:
+  #     columns:
+  #       - id
+  #       - slug
+  #       - address
+  #       - type
+  #       - network
+  #       - name: metadata
+  #         type: variant
+  #       - createdAt
+  #       - updatedAt
