--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 settings.yaml
 dev.db
 prod.db
+/data_downloads/
 
 # Python ignores
 # https://github.com/github/gitignore/blob/master/Python.gitignore
