--- a/tasks/extract.yaml
+++ b/tasks/extract.yaml
@@ -28,10 +28,56 @@ tasks:
       stage: data_load_test
       schema: analytics_logs
       table: transactions
-      start_block: 0
-      end_block: 9151904
+      start_block: 9151904
+      end_block: 9356457
       blocks_per_file: 10000
 
+  extract_logs:
+    type: python
+    class: other_tables_extract
+    parameters:
+      file_format: csv_loading
+      stage: bsc_logs_load
+      schema: analytics_logs
+      table: logs
+
+  extract_traces:
+    type: python
+    class: ethereum_etl.loadData
+    parameters:
+      file_format: csv_loading
+      stage: traces_load
+      schema: analytics_logs
+      table: traces
+      start_block: 0
+      end_block: 9356457
+      blocks_per_file: 10000
+
+  extract_other_tables:
+    type: python
+    class: other_tables_extract.loadData
+    parameters:
+      file_format: csv_loading
+      schema: analytics_logs
+      stage: bsc_other_tables
+      start_block: 738
+      end_block: 938
+      max_workers: 10
+
+  extract_test_tables:
+    type: python
+    class: other_tables_extract.loadData
+    parameters:
+      file_format: csv_loading
+      schema: analytics_logs
+      stage: load_test
+      start_block: 695
+      end_block: 696
+      max_workers: 12
+
+  update_bsc_blocks:
+    type: python
+    class: bsc_data_load.loadData
   # extract_bq_ethereum_tokens:
   #   preset: extract_bigquery
   #   source:
