updated readme and separated create tasks

--- a/project.yaml
+++ b/project.yaml
@@ -93,7 +93,7 @@ presets:
 
   create_table:
     type: sql
-    file_name: "{{ task.group }}/{{ task.name.split('_')[0] }}_{{ task.name.split('_')[-1] }}.sql"
+    file_name: "create_tables/{{ task.name.split('_')[0] }}_{{ task.name.split('_')[-1] }}.sql"
     parameters:
       schema: "{{ schema['logs'] }}"
       table: "{{ user_prefix }}{{ task.name['create_'|length:] }}"
