--- a/Dockerfile_bsc
+++ b/Dockerfile_bsc
@@ -14,6 +14,8 @@ RUN apt-get -y install python3.8
 
 RUN apt-get -y install python3-pip
 
+RUN pip install -e git+git://github.com/TimofeySugaipov/ethereum-etl.git#egg=ethereumetl
+
 WORKDIR /app
 
 COPY . .
