added separate requirement files

--- a/Dockerfile_bsc
+++ b/Dockerfile_bsc
@@ -14,10 +14,8 @@ RUN apt-get -y install python3.8
 
 RUN apt-get -y install python3-pip
 
-RUN pip install -e git+git://github.com/TimofeySugaipov/ethereum-etl.git#egg=ethereumetl
-
 WORKDIR /app
 
 COPY . .
 
-RUN pip install -r requirements.txt
+RUN pip install -r requirements_bsc.txt
