added a chain_data_load preset

--- a/project.yaml
+++ b/project.yaml
@@ -110,3 +110,15 @@ presets:
       schema: "{{ schema['logs'] }}"
       currency: "{{ task.name.split('_')[1] }}"
       table: "{{ task.name.split('_')[-1] }}"
+
+  chain_data_load:
+    type: python
+    class: blockchain_data.LoadData
+    parameters:
+      file_format: csv_unloading
+      stage: "{{ task.name.split('_')[0] }}_stage"
+      blockchain: "{{ task.name.split('_')[0] }}"
+      blockchain_url: "{{ blockchain[ task.name.split('_')[0] ] }}"
+      blocks_per_file: 10000
+      max_workers: 10
+      is_archive: false
