--- a/tasks/extract_bsc.yaml
+++ b/tasks/extract_bsc.yaml
@@ -1,30 +1,17 @@
 tasks:
 
   bsc_missing_data_load:
-    type: python
+    preset: chain_data_load
     class: blockchain_data_reload.LoadData
     parameters:
-      file_format: csv_unloading
-      stage: bsc_stage
-      blockchain: bsc
-      blockchain_url: "{{ blockchain['bsc'] }}"
       blocks_per_file: 500
-      max_workers: 10
-      is_archive: false
     parents:
       - create_bsc_blocks
 
   bsc_incremental_load:
-    type: python
-    class: blockchain_data.LoadData
+    preset: chain_data_load
     parameters:
-      file_format: csv_unloading
-      stage: bsc_stage
-      blockchain: bsc
-      blockchain_url: "{{ blockchain['bsc'] }}"
       blocks_per_file: 1000
-      max_workers: 10
-      is_archive: false
     parents:
       - bsc_missing_data_load
       - create_bsc_blocks
