--- a/tasks/extract_eth.yaml
+++ b/tasks/extract_eth.yaml
@@ -1,29 +1,17 @@
 tasks:
 
   eth_missing_data_load:
-    type: python
+    preset: chain_data_load
     class: blockchain_data_reload.LoadData
     parameters:
-      file_format: csv_unloading
-      stage: eth_stage
-      blockchain: eth
-      blockchain_url: "{{ blockchain['eth'] }}"
-      blocks_per_file: 10
-      max_workers: 10
+      blocks_per_file: 500
       is_archive: true
     parents:
       - create_eth_blocks
 
   eth_incremental_load:
-    type: python
-    class: blockchain_data.LoadData
+    preset: chain_data_load
     parameters:
-      file_format: csv_unloading
-      stage: eth_stage
-      blockchain: eth
-      blockchain_url: "{{ blockchain['eth'] }}"
-      blocks_per_file: 10000
-      max_workers: 10
       is_archive: true
     parents:
       - eth_missing_data_load
