--- a/project.yaml
+++ b/project.yaml
@@ -18,6 +18,8 @@ parameters:
     eth: 'https://mainnet.ethereum.nodes-mainnet.theapis.io'
 
   from_prod:
+  - "logs.bsc_token_transfers"
+  - "logs.bsc_blocks"
 
 required_credentials:
   - warehouse
@@ -110,13 +112,3 @@ presets:
       schema: "{{ schema['logs'] }}"
       currency: "{{ task.name.split('_')[1] }}"
       table: "{{ task.name.split('_')[-1] }}"
-
-  # For hard-coded address tables, like stg_internal_xwg_addresses
-  address_table:
-    type: autosql
-    materialisation: table
-    file_name: "xwg/address_table.sql"
-    destination:
-      tmp_schema: "{{ schema['staging'] }}"
-      schema: "{{ schema['staging'] }}"
-      table: "{{ user_prefix }}{{ task.name }}"
