--- a/tasks/xwg.yaml
+++ b/tasks/xwg.yaml
@@ -1,5 +1,5 @@
 presets:
-    # For hard-coded address tables, like stg_internal_xwg_addresses
+    # For hard-coded address tables, like stg_bsc_internal_xwg_addresses
     address_table:
       type: autosql
       materialisation: table
@@ -12,21 +12,21 @@ presets:
 tasks:
 
   # ERC20 tokens we are interested in for holder analysis
-  stg_holders_erc20_tokens:
+  stg_bsc_holders_erc20_tokens:
     preset: address_table
     parameters:
       addresses:
         - "'0x6b23c89196deb721e6fd9726e6c76e4810a464bc'"
 
   # ERC721 tokens we are interested in for holder analysis
-  stg_holders_erc721_tokens:
+  stg_bsc_holders_erc721_tokens:
     preset: address_table
     parameters:
       addresses:
         - "'0xe6965b4f189dbdb2bd65e60abaeb531b6fe9580b'"
 
   # Holding addresses which are owned by XWG so we can exclude
-  stg_xwg_addresses_to_exclude:
+  stg_bsc_xwg_addresses_to_exclude:
     preset: address_table
     parameters:
       addresses:
@@ -55,51 +55,76 @@ tasks:
         - "'0xc061a008d5a5df8487ed90e8ec78d89d85be058f'"
 
   # Payment tokens considered for NFT sales metrics
-  stg_nft_sale_payment_tokens:
+  stg_bsc_nft_sale_payment_tokens:
     preset: address_table
     parameters:
       addresses:
         - "'0x6b23c89196deb721e6fd9726e6c76e4810a464bc'"
 
   # NFT tokens considered for NFT sales metrics
-  stg_nft_sale_nft_tokens:
+  stg_bsc_nft_sale_nft_tokens:
     preset: address_table
     parameters:
       addresses:
         - "'0xe6965b4f189dbdb2bd65e60abaeb531b6fe9580b'"
 
-  stg_holder_balances:
+  stg_bsc_holder_balances:
     preset: staging
     parents:
-      - stg_holders_erc20_tokens
-      - stg_holders_erc721_tokens
-      - stg_xwg_addresses_to_exclude
+      - stg_bsc_holders_erc20_tokens
+      - stg_bsc_holders_erc721_tokens
+      - stg_bsc_xwg_addresses_to_exclude
 
-  f_nft_sales:
+  f_bsc_nft_sales:
     preset: models
     parents:
-      - stg_nft_sale_nft_tokens
-      - stg_nft_sale_payment_tokens
+      - stg_bsc_nft_sale_nft_tokens
+      - stg_bsc_nft_sale_payment_tokens
 
-  f_circulating_supply:
+  mb_f_bsc_nft_sales:
+    preset: metabase
+    parents:
+      - f_bsc_nft_sales
+
+  f_bsc_circulating_supply:
     preset: models
     parents:
-      - stg_holder_balances
+      - stg_bsc_holder_balances
       - stg_dates
 
-  f_holder_balances:
-    preset: models
+  mb_f_bsc_circulating_supply:
+    preset: metabase
     parents:
-      - stg_holder_balances
-      - f_circulating_supply
+      - f_bsc_circulating_supply
 
-  f_daily_holders_count:
+  f_bsc_holder_balances:
     preset: models
     parents:
-      - f_holder_balances
+      - stg_bsc_holder_balances
+      - f_bsc_circulating_supply
+
+  mb_f_bsc_holder_balances:
+    preset: metabase
+    parents:
+      - f_bsc_holder_balances
+
+  f_bsc_daily_holders_count:
+    preset: models
+    parents:
+      - f_bsc_holder_balances
       - stg_dates
 
-  f_daily_active_traders:
+  mb_f_bsc_daily_holders_count:
+    preset: metabase
+    parents:
+      - f_bsc_daily_holders_count
+
+  f_bsc_daily_active_traders:
     preset: models
     parents:
-      - f_nft_sales
+      - f_bsc_nft_sales
+
+  mb_f_bsc_daily_active_traders:
+    preset: metabase
+    parents:
+      - f_bsc_daily_active_traders
